Downgrade Java version to 11 and add Maven build profiles for release management
- Updated `pom.xml` to set Java compiler source and target to version 11.
- Added Maven build profiles (`snapshot`, `release`, `release_leqee`) for artifact distribution.
- Configured resource filtering and excluded `config.properties`.
- Included Maven plugins for source, javadoc, and GPG signing in release profiles.
- Added `@since 1.0` annotations to all entity classes and utility classes for version tracking.